--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 		<div class="right-side">
-        	<form id="contact-form" action="/contact.html" method="post" data-netlify="true">
+        	<form name="contact" id="contact-form" action="/contact.html" method="post" data-netlify="true">
         	    <input name="yourname" type="text" class="feedback-input" placeholder="Name" required/> 
             	<input name="youremail" type="email" class="feedback-input" placeholder="Email" required />
             	<input name="yoursubject" type="text" class="feedback-input" placeholder="Subject" required/> 
