bunch of changes

--- a/about.html
+++ b/about.html
@@ -1,47 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="#">
-	<title>GitarrenStudium Vienna</title>
-	<link rel="stylesheet" href="./styles.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./guitar.jpg" >
+
+    <!-- Updated Title Tag and Meta Description -->
+    <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
+    <meta name="description" content="Explore Gitarrenstudium Vienna for high-quality guitar lessons. Our expert instructor offer comprehensive courses for beginners and advanced players. Join me to enhance your guitar skills.">
+
+    <!-- Additional Meta Tags -->
+    <meta name="keywords" content="Gitarre, gitarrenlehrer, gitarrenunterricht, musikunterricht, gitarrenlernen, gitarrenstudium, gitarrist, musik, Wien, Vienna, Liesing, Rodaun, Mauer, 1230 Wien, 23. Bezirk, Kerngasse, Perchtoldsdorf, Breitenfurt, Kaltenleutgeben, Meidling, Musikschule, saite">
+
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
+
 <body>
 <div class="overlay-navigation">
 	<nav role="navigation">
 		<ul>
-			<li><a href="index.html" data-content="The beginning">Home</a></li>
-			<li><a href="about.html" data-content="Curious?">Über Mich</a></li>
+			<li><a href="index.html" data-content="zu Hause">Home</a></li>
+			<li><a href="about.html" data-content="Uber mich, unterricht, preise">Unterricht</a></li>
 			<li><a href="videos.html" data-content="Lord of the Quazar">Videos</a></li>
-			<li><a href="contact.html" data-content="">Kontakt</a></li>
+			<li><a href="contact.html" data-content="Kontakt informationen">Kontakt</a></li>
 
 		</ul>
 	</nav>
 </div>
 
-<section class="home">
 
+	<div class="intro">
+		<div class="unterricht">
+			<h2>UNTERRICHT</h2>
+			<p>
+				Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.Als professioneller Gitarrenlehrer biete ich dir einen Gitarrenunterricht, der exakt auf dein Niveau und deine Wünsche abgestimmt ist. Ich bin seit mehr als 25 Jahren als professioneller Gitarrist und Musikpädagoge. Seit 26 Jahren unterrichte ich Gitarre und habe mehrere Lehrmethoden für jede Altersgruppe und orientiere mich an die Lernziele und Wünsche des Schülers.</br>
+				 Der Unterricht ist geeignet für Anfänger, Fortgeschrittene , Professionelle und Wiedereinsteiger. E- Gitarre, Konzertgitarre , Westerngitarre Den Lehrstoff stelle ich zur Verfügung. </br>
+				 Wenn Du dich auf den Abschluss oder die Aufnahmeprüfungen vorbereitest, kann ich dir dabei auch helfen mit professioneller Unterstützung.</br>
+				 Saitenwechseln, Gitarreneinstellung </br>
+				 Sprache: Deutsch, English, Ungarisch </br>
+ 			</p>
+		</div>
+		<div class="preise">
+			<h2>PREISE</h2>
+			<p>
+			Einzelunterricht (60 Minuten) 40 € </br>
+			Einzelunterricht (30 Minuten) 25 € </br>
+			</p>
+		</div>
+		<div class="kontakt">
+			<h2>KONTAKT</h2>
+			<p> 
+				
+				1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</br>
+				gitarrenstudiumvienna@gmail.com</br>
+				+43 6602533122</p>
+
+		</div>
+	</div>
 	<div class="open-overlay">
 		<span class="bar-top"></span>
 		<span class="bar-middle"></span>
 		<span class="bar-bottom"></span>
 	</div>
-	<div class="info">
-		<p>Ich wurde 1970 geboren. Mit 17 Jahren habe ich meine erste Gitarre in die Hand genommen und meine Liebe zur
-			Musik ist seitdem ungebrochen.
-			1994 legte ich in Budapest die Prüfung für darstellende Kunst mit Schwerpunkt Jazzgitarre ab. Mein Lehrer
-			war Ferenc Tornoczky.
-			Ich habe ein Diplom in Miskolc am Béla-Bartók-Musikinstitut erhalten, Gitarrenlehrer und Kammerkünstler.
-			Ich unterrichte aktiv seit 1995. Ich unterrichtete zwei Jahre in Wien, dann spielte ich Musik auf einem
-			Kreuzfahrtschiff von Island nach Ägypten.
-			Lieblingsmusiker: Steve Lukather (TOTO), Greg Howe, Frank Gambale, Richie Kotzen, Chick Corea, Yngwie
-			Malmsteen, Tommy Emmanuel, David Russel, John Williams, Guthrie Govan, Steve Morse, Joe Satriani, Steve
-			Vai…….. und viele andere.</p>
-	</div>
 
-</section>
+
 <div class="footer">
 	<p id="copyright"></p>
 
@@ -52,8 +76,6 @@
     </script>
 </div>
 
-<script type="text/javascript" charset="UTF-8" src="./overlay.js"></script>
-
-
+<script type="text/javascript" src="./overlay.js"></script>
 </body>
 </html>
