--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="#">
-	<title>Gitarrenstudium Vienna</title>
-	<link rel="stylesheet" href="./styles.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./guitar.jpg" >
+
+    <!-- Updated Title Tag and Meta Description -->
+    <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
+    <meta name="description" content="Explore Gitarrenstudium Vienna for high-quality guitar lessons. Our expert instructor offer comprehensive courses for beginners and advanced players. Join us to enhance your guitar skills.">
+
+    <!-- Additional Meta Tags -->
+    <meta name="keywords" content="Gitarre, gitarrenlehrer, gitarrenunterricht, musikunterricht, gitarrenlernen, gitarrenstudium, gitarrist, musik, Wien, Vienna, Liesing, Rodaun, Mauer, 1230 Wien, 23. Bezirk, Kerngasse, Perchtoldsdorf, Breitenfurt, Kaltenleutgeben, Meidling, Musikschule, saite">
+
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="overlay-navigation">
 	<nav role="navigation">
 		<ul>
-			<li><a href="index.html" data-content="The beginning">Home</a></li>
-			<li><a href="about.html" data-content="Curious?">Über Mich</a></li>
+			<li><a href="index.html" data-content="zu Hause">Home</a></li>
+			<li><a href="about.html" data-content="Uber mich, unterricht, preise">Unterricht</a></li>
 			<li><a href="videos.html" data-content="Lord of the Quazar">Videos</a></li>
-			<li><a href="contact.html" data-content="">Kontakt</a></li>
+			<li><a href="contact.html" data-content="Kontakt informationen">Kontakt</a></li>
 
 		</ul>
 	</nav>
