--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 			<a href="">gitarrenstudiumvienna@gmail.com</a>
 	  		</div>
 			<div class="item">
-				<h3>TELEFONE</h3>
+				<h3>TELEFONNUMMER</h3>
 				<a href="">+43 6602533122</a>
 			</div>
 		
@@ -47,20 +47,20 @@
 				<a href="">1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</a>
 	  		</div>
 	  		<div class="item">
-				<h3>ANDERE</h3>
+				<h3>SOCIAL MEDIA</h3>
 				<div class="icons">
 				  <a href="https://www.youtube.com/@gaborfekete2864" class = "fa fa-youtube"></a>
-				  <a href="" class = "fa fa-facebook"></a>
+				  <a href="https://www.facebook.com/profile.php?id=61556119958569" class = "fa fa-facebook"></a>
 				</div>
 			</div>
 		</div>
 		<div class="right-side">
         	<form name="contact" onsubmit="Submit" method="post" data-netlify="true" data-netlify-honeypot="bot-field">
 				<input name="bot-field" style="visibility: hidden"/>
-        	    <input name="yourname" type="text" class="feedback-input" placeholder="Name" required/> 
-            	<input name="youremail" type="email" class="feedback-input" placeholder="Email" required />
-            	<input name="yoursubject" type="text" class="feedback-input" placeholder="Subject" required/> 
-            	<textarea name="yourmessage" class="feedback-input" placeholder="Message" required> </textarea>
+        	    <input name="name" type="text" class="feedback-input" placeholder="Name" required/> 
+            	<input name="email" type="email" class="feedback-input" placeholder="Email" required />
+            	<input name="subject" type="text" class="feedback-input" placeholder="Subject" required/> 
+            	<textarea name="message" class="feedback-input" placeholder="Message" required> </textarea>
             	<button type="submit">Senden</button>
             </form>
        
