--- a/success.html
+++ b/success.html
@@ -32,39 +32,7 @@
 
 
 	<div class="container">
-		<div class="left-side">
-	  		<div class="item">
-			<h3>EMAIL</h3>
-			<a href="">gitarrenstudiumvienna@gmail.com</a>
-	  		</div>
-			<div class="item">
-				<h3>TELEFONNUMMER</h3>
-				<a href="">+43 6602533122</a>
-			</div>
-		
-	  		<div class="item">
-				<h3>ADDRESSE</h3>
-				<a href="">1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</a>
-	  		</div>
-	  		<div class="item">
-				<h3>SOCIAL MEDIA</h3>
-				<div class="icons">
-				  <a href="https://www.youtube.com/@gaborfekete2864" target="_blank" class = "fa fa-youtube"></a>
-				  <a href="https://www.facebook.com/profile.php?id=61556119958569" target="_blank" class = "fa fa-facebook"></a>
-				</div>
-			</div>
-		</div>
-		<div class="right-side">
-        	<form name="contact" onsubmit="Submit" method="post" data-netlify="true" data-netlify-honeypot="bot-field" action="/success/">
-				<input name="bot-field" style="visibility: hidden"/>
-        	    <input name="name" type="text" class="feedback-input" placeholder="Name" required/> 
-            	<input name="email" type="email" class="feedback-input" placeholder="Email" required />
-            	<input name="subject" type="text" class="feedback-input" placeholder="Subject" required/> 
-            	<textarea name="message" class="feedback-input" placeholder="Message" required> </textarea>
-            	<button type="submit">Senden</button>
-            </form>
-       
-      	</div>
+		<h1>Danke für deine Nachricht!</h1>
 	</div>
 	<div class="open-overlay">
 		<span class="bar-top"></span>
