--- a/contact.html
+++ b/contact.html
@@ -35,16 +35,16 @@
 		<div class="left-side">
 	  		<div class="item">
 			<h3>EMAIL</h3>
-			<a href="">gitarrenstudiumvienna@gmail.com</a>
+			<a href="mailto:gitarrenstudiumvienna@gmail.com?subject=Subject%20of%20the%20email&body=Body%20of%20the%20email">gitarrenstudiumvienna@gmail.com</a>
 	  		</div>
 			<div class="item">
 				<h3>TELEFONNUMMER</h3>
-				<a href="">+43 6602533122</a>
+				<a href="tel:+436602533122">+43 6602533122</a>
 			</div>
 		
 	  		<div class="item">
 				<h3>ADDRESSE</h3>
-				<a href="">1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</a>
+				<a href="https://maps.app.goo.gl/DWiwJPQHeWh4c1sF9" target="_blank">1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</a>
 	  		</div>
 	  		<div class="item">
 				<h3>SOCIAL MEDIA</h3>
