fixing success redirect

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 		<div class="right-side">
-        	<form name="contact" onsubmit="Submit" method="post" data-netlify="true" data-netlify-honeypot="bot-field" action="/success/">
+        	<form name="contact" onsubmit="Submit" method="post" data-netlify="true" data-netlify-honeypot="bot-field" action="./success.html">
 				<input name="bot-field" style="visibility: hidden"/>
         	    <input name="name" type="text" class="feedback-input" placeholder="Name" required/> 
             	<input name="email" type="email" class="feedback-input" placeholder="Email" required />
