fa icons, borders

--- a/about.html
+++ b/about.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://kit.fontawesome.com/c530af3567.js" crossorigin="anonymous"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
@@ -36,10 +38,10 @@
 			<h2>UNTERRICHT</h2>
 			<p>
 				Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.Als professioneller Gitarrenlehrer biete ich dir einen Gitarrenunterricht, der exakt auf dein Niveau und deine Wünsche abgestimmt ist. Ich bin seit mehr als 25 Jahren als professioneller Gitarrist und Musikpädagoge. Seit 26 Jahren unterrichte ich Gitarre und habe mehrere Lehrmethoden für jede Altersgruppe und orientiere mich an die Lernziele und Wünsche des Schülers.</br>
-				 Der Unterricht ist geeignet für Anfänger, Fortgeschrittene , Professionelle und Wiedereinsteiger. E- Gitarre, Konzertgitarre , Westerngitarre Den Lehrstoff stelle ich zur Verfügung. </br>
-				 Wenn Du dich auf den Abschluss oder die Aufnahmeprüfungen vorbereitest, kann ich dir dabei auch helfen mit professioneller Unterstützung.</br>
-				 Saitenwechseln, Gitarreneinstellung </br>
-				 Sprache: Deutsch, English, Ungarisch </br>
+				<i class="fa-solid fa-guitar"></i> Der Unterricht ist geeignet für Anfänger, Fortgeschrittene , Professionelle und Wiedereinsteiger. E- Gitarre, Konzertgitarre , Westerngitarre Den Lehrstoff stelle ich zur Verfügung. </br>
+				<i class="fa-solid fa-guitar"></i> Wenn Du dich auf den Abschluss oder die Aufnahmeprüfungen vorbereitest, kann ich dir dabei auch helfen mit professioneller Unterstützung.</br>
+				<i class="fa-solid fa-guitar"></i> Saitenwechseln, Gitarreneinstellung </br>
+				<i class="fa-solid fa-guitar"></i> Sprache: Deutsch, English, Ungarisch </br>
  			</p>
 		</div>
 		<div class="preise">
