--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Updated Title Tag and Meta Description -->
     <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
-    <meta name="description" content="Explore Gitarrenstudium Vienna for high-quality guitar lessons. Our expert instructor offer comprehensive courses for beginners and advanced players. Join us to enhance your guitar skills.">
+    <meta name="description" content="Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.">
 
     <!-- Additional Meta Tags -->
     <meta name="keywords" content="Gitarre, gitarrenlehrer, gitarrenunterricht, musikunterricht, gitarrenlernen, gitarrenstudium, gitarrist, musik, Wien, Vienna, Liesing, Rodaun, Mauer, 1230 Wien, 23. Bezirk, Kerngasse, Perchtoldsdorf, Breitenfurt, Kaltenleutgeben, Meidling, Musikschule, saite">
