--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
     <!-- Updated Title Tag and Meta Description -->
     <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
-    <meta name="description" content="Explore Gitarrenstudium Vienna for high-quality guitar lessons. Our expert instructor offer comprehensive courses for beginners and advanced players. Join me to enhance your guitar skills.">
+    <meta name="description" content="Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.">
 
     <!-- Additional Meta Tags -->
     <meta name="keywords" content="Gitarre, gitarrenlehrer, gitarrenunterricht, musikunterricht, gitarrenlernen, gitarrenstudium, gitarrist, musik, Wien, Vienna, Liesing, Rodaun, Mauer, 1230 Wien, 23. Bezirk, Kerngasse, Perchtoldsdorf, Breitenfurt, Kaltenleutgeben, Meidling, Musikschule, saite">
@@ -37,7 +37,7 @@
 		<div class="unterricht">
 			<h2>UNTERRICHT</h2>
 			<p>
-				Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.Als professioneller Gitarrenlehrer biete ich dir einen Gitarrenunterricht, der exakt auf dein Niveau und deine Wünsche abgestimmt ist. Ich bin seit mehr als 25 Jahren als professioneller Gitarrist und Musikpädagoge. Seit 26 Jahren unterrichte ich Gitarre und habe mehrere Lehrmethoden für jede Altersgruppe und orientiere mich an die Lernziele und Wünsche des Schülers.</br>
+				Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung. Als professioneller Gitarrenlehrer biete ich dir einen Gitarrenunterricht, der exakt auf dein Niveau und deine Wünsche abgestimmt ist. Ich bin seit mehr als 25 Jahren als professioneller Gitarrist und Musikpädagoge. Seit 26 Jahren unterrichte ich Gitarre und habe mehrere Lehrmethoden für jede Altersgruppe und orientiere mich an die Lernziele und Wünsche des Schülers.</br>
 				<i class="fa-solid fa-guitar"></i> Der Unterricht ist geeignet für Anfänger, Fortgeschrittene , Professionelle und Wiedereinsteiger. E- Gitarre, Konzertgitarre , Westerngitarre Den Lehrstoff stelle ich zur Verfügung. </br>
 				<i class="fa-solid fa-guitar"></i> Wenn Du dich auf den Abschluss oder die Aufnahmeprüfungen vorbereitest, kann ich dir dabei auch helfen mit professioneller Unterstützung.</br>
 				<i class="fa-solid fa-guitar"></i> Saitenwechseln, Gitarreneinstellung </br>
@@ -55,9 +55,9 @@
 			<h2>KONTAKT</h2>
 			<p> 
 				
-				1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</br>
-				gitarrenstudiumvienna@gmail.com</br>
-				+43 6602533122</p>
+			1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</br>
+			gitarrenstudiumvienna@gmail.com</br>
+			+43 6602533122</p>
 
 		</div>
 	</div>
