--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <!-- Updated Title Tag and Meta Description -->
     <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
-    <meta name="description" content="Explore Gitarrenstudium Vienna for high-quality guitar lessons. Our expert instructor offer comprehensive courses for beginners and advanced players. Join me to enhance your guitar skills.">
+    <meta name="description" content="Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.">
 
     <!-- Additional Meta Tags -->
     <meta name="keywords" content="Gitarre, gitarrenlehrer, gitarrenunterricht, musikunterricht, gitarrenlernen, gitarrenstudium, gitarrist, musik, Wien, Vienna, Liesing, Rodaun, Mauer, 1230 Wien, 23. Bezirk, Kerngasse, Perchtoldsdorf, Breitenfurt, Kaltenleutgeben, Meidling, Musikschule, saite">
@@ -44,7 +44,7 @@
 		
 	  		<div class="item">
 				<h3>ADDRESSE</h3>
-				<a href="https://maps.app.goo.gl/DWiwJPQHeWh4c1sF9" target="_blank">1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</a>
+				<a href="https://maps.app.goo.gl/y2B8h3MyKhHeRsXA6" target="_blank">1230 Wien, 23. Bezirk, Liesing, Kerngasse</a>
 	  		</div>
 	  		<div class="item">
 				<h3>SOCIAL MEDIA</h3>
