--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 			<h2>KONTAKT</h2>
 			<p> 
 				
-			1230 Wien, 23. Bezirk, Liesing, Kerngasse 34. Stg. 2.</br>
+			1230 Wien, 23. Bezirk, Liesing, Kerngasse</br>
 			gitarrenstudiumvienna@gmail.com</br>
 			+43 6602533122</p>
 
