whatsapp, picture, formatting etc

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./guitar.jpg" >
 
     <!-- Updated Title Tag and Meta Description -->
-    <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
+    <title>GitarrenstudiumVienna - Lernen Sie Gitarre mit einem erfahrenen Lehrer</title>
     <meta name="description" content="Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.">
 
     <!-- Additional Meta Tags -->
@@ -34,32 +34,36 @@
 
 
 	<div class="intro">
-		<div class="unterricht">
-			<h2>UNTERRICHT</h2>
-			<p>
-				Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung. Als professioneller Gitarrenlehrer biete ich dir einen Gitarrenunterricht, der exakt auf dein Niveau und deine Wünsche abgestimmt ist. Ich bin seit mehr als 25 Jahren als professioneller Gitarrist und Musikpädagoge. Seit 26 Jahren unterrichte ich Gitarre und habe mehrere Lehrmethoden für jede Altersgruppe und orientiere mich an die Lernziele und Wünsche des Schülers.</br>
-				<i class="fa-solid fa-guitar"></i> Der Unterricht ist geeignet für Anfänger, Fortgeschrittene , Professionelle und Wiedereinsteiger. E- Gitarre, Konzertgitarre , Westerngitarre Den Lehrstoff stelle ich zur Verfügung. </br>
-				<i class="fa-solid fa-guitar"></i> Wenn Du dich auf den Abschluss oder die Aufnahmeprüfungen vorbereitest, kann ich dir dabei auch helfen mit professioneller Unterstützung.</br>
-				<i class="fa-solid fa-guitar"></i> Saitenwechseln, Gitarreneinstellung </br>
-				<i class="fa-solid fa-guitar"></i> Sprache: Deutsch, English, Ungarisch </br>
- 			</p>
+		<div class="intro-left">
+			<div class="unterricht">
+				<h2>UNTERRICHT</h2>
+				<p>
+					Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung. Als professioneller Gitarrenlehrer biete ich dir einen Gitarrenunterricht, der exakt auf dein Niveau und deine Wünsche abgestimmt ist. Ich bin seit mehr als 25 Jahren als professioneller Gitarrist und Musikpädagoge. Seit 26 Jahren unterrichte ich Gitarre und habe mehrere Lehrmethoden für jede Altersgruppe und orientiere mich an die Lernziele und Wünsche des Schülers.</br>
+					<i class="fa-solid fa-guitar"></i> Der Unterricht ist geeignet für Anfänger, Fortgeschrittene , Professionelle und Wiedereinsteiger. E- Gitarre, Konzertgitarre , Westerngitarre Den Lehrstoff stelle ich zur Verfügung. </br>
+					<i class="fa-solid fa-guitar"></i> Wenn Du dich auf den Abschluss oder die Aufnahmeprüfungen vorbereitest, kann ich dir dabei auch helfen mit professioneller Unterstützung.</br>
+					<i class="fa-solid fa-guitar"></i> Saitenwechseln, Gitarreneinstellung </br>
+					<i class="fa-solid fa-guitar"></i> Sprache: Deutsch, English, Ungarisch </br>
+ 				</p>
+			</div>
+			<div class="preise">
+				<h2>PREISE</h2>
+				<p>
+				Einzelunterricht (60 Minuten) 40 € </br>
+				Einzelunterricht (30 Minuten) 25 € </br>
+				</p>
+			</div>
+			<div class="kontakt">
+				<h2>KONTAKT</h2>
+				<p> 
+				<i class="fa-solid fa-location-dot"></i><a href="https://maps.app.goo.gl/y2B8h3MyKhHeRsXA6" target="_blank" rel="noopener noreferrer">1230 Wien, 23. Bezirk, Liesing, Kerngasse</a></br>
+				<i class="fa-regular fa-envelope"></i><a href="mailto:gitarrenstudiumvienna@gmail.com?subject=Subject%20of%20the%20email&body=Body%20of%20the%20email">gitarrenstudiumvienna@gmail.com</a></br>
+				<i class="fa-solid fa-phone"></i><a href="tel:+436602533122" rel="noopener noreferrer">+43 6602533122</a></p>
+			</div>
 		</div>
-		<div class="preise">
-			<h2>PREISE</h2>
-			<p>
-			Einzelunterricht (60 Minuten) 40 € </br>
-			Einzelunterricht (30 Minuten) 25 € </br>
-			</p>
-		</div>
-		<div class="kontakt">
-			<h2>KONTAKT</h2>
-			<p> 
-				
-			1230 Wien, 23. Bezirk, Liesing, Kerngasse</br>
-			gitarrenstudiumvienna@gmail.com</br>
-			+43 6602533122</p>
-
-		</div>
+		<div class="intro-right">
+			<img src="./fg2.png" alt="fg" draggable="false">
+		  </div>
+		  
 	</div>
 	<div class="open-overlay">
 		<span class="bar-top"></span>
