--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./guitar.jpg" >
 
     <!-- Updated Title Tag and Meta Description -->
-    <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
+    <title>GitarrenstudiumVienna - Lernen Sie Gitarre mit einem erfahrenen Lehrer</title>
     <meta name="description" content="Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.">
 
     <!-- Additional Meta Tags -->
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/c530af3567.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,23 +35,24 @@
 	<div class="container">
 		<div class="left-side">
 	  		<div class="item">
-			<h3>EMAIL</h3>
+			<h3><i class="fa-regular fa-envelope"></i> </h3>
 			<a href="mailto:gitarrenstudiumvienna@gmail.com?subject=Subject%20of%20the%20email&body=Body%20of%20the%20email">gitarrenstudiumvienna@gmail.com</a>
 	  		</div>
 			<div class="item">
-				<h3>TELEFONNUMMER</h3>
+				<h3><i class="fa-solid fa-phone" rel="noopener noreferrer"></i> </h3>
 				<a href="tel:+436602533122">+43 6602533122</a>
 			</div>
 		
 	  		<div class="item">
-				<h3>ADDRESSE</h3>
-				<a href="https://maps.app.goo.gl/y2B8h3MyKhHeRsXA6" target="_blank">1230 Wien, 23. Bezirk, Liesing, Kerngasse</a>
+				<h3><i class="fa-solid fa-location-dot"></i> </h3>
+				<a href="https://maps.app.goo.gl/y2B8h3MyKhHeRsXA6" target="_blank" rel="noopener noreferrer">1230 Wien, 23. Bezirk, Liesing, Kerngasse</a>
 	  		</div>
 	  		<div class="item">
-				<h3>SOCIAL MEDIA</h3>
+				<h3></h3>
 				<div class="icons">
-				  <a href="https://www.youtube.com/@gaborfekete2864" target="_blank" class = "fa fa-youtube"></a>
-				  <a href="https://www.facebook.com/profile.php?id=61556119958569" target="_blank" class = "fa fa-facebook"></a>
+				  <a href="https://www.youtube.com/@gaborfekete2864" target="_blank" rel="noopener noreferrer" class = "fa fa-youtube"></a>
+				  <a href="https://www.facebook.com/profile.php?id=61556119958569" target="_blank" rel="noopener noreferrer" class = "fa fa-facebook"></a>
+				  <a href="https://wa.me/+436602533122" target="_blank" rel="noopener noreferrer" class="fa-brands fa-whatsapp"></a>
 				</div>
 			</div>
 		</div>
