--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./guitar.jpg" >
 
     <!-- Updated Title Tag and Meta Description -->
-    <title>GitarrenstudiumVienna - Learn Guitar with Expert Instructors</title>
+    <title>GitarrenstudiumVienna - Lernen Sie Gitarre mit einem erfahrenen Lehrer</title>
     <meta name="description" content="Gitarrenunterricht für alle Niveaus mit Spaß und Freude von Diplom Gitarrist und Musikpädagoge mit langjähriger Bühnen und Unterrichtserfahrung.">
 
     <!-- Additional Meta Tags -->
