--- a/about.html
+++ b/about.html
@@ -61,7 +61,9 @@
 			</div>
 		</div>
 		<div class="intro-right">
+			<div class="overlay"></div>
 			<img src="./fg2.png" alt="fg" draggable="false">
+			
 		  </div>
 		  
 	</div>
